--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "Expensify",
   "version": "1.0.0",
+  "jest": {
+    "verbose": true,
+    "setupFiles": [
+      "raf/polyfill",
+      "<rootDir>/src/tests/setupTests.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  },
   "main": "index.js",
   "author": "Michael Ngo",
   "license": "MIT",
@@ -9,29 +19,35 @@
     "build": "webpack",
     "dev-server": "webpack-dev-server",
     "test": "jest --watch",
-    "jest": "jest --coverage"
+    "test-coverage": "jest --coverage"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
+    "babel-jest": "^23.4.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "jest": "^23.4.1",
     "live-server": "^1.2.0",
     "moment": "^2.22.2",
     "node-sass": "^4.9.2",
     "normalize.css": "7.0.0",
-    "react": "15.6.1",
+    "raf": "^3.3.2",
+    "react": "^16.4.1",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^17.1.0",
-    "react-dom": "15.6.1",
+    "react-dom": "^16.4.1",
     "react-modal": "2.2.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-test-renderer": "^16.4.1",
     "redux": "^4.0.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
