--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --watch",
     "test-coverage": "jest --coverage"
@@ -34,6 +35,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^23.4.1",
     "live-server": "^1.2.0",
     "moment": "^2.22.2",
