--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^23.4.1",
     "live-server": "^1.2.0",
