Setup devDepencies and dist foldfer

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-bundle.js
-bundle.js.map
-bundle_styles.css
-bundle_styles.css.map
 coverage
 node_modules
 package-lock.json
 playground
+public/dist/
 yarn.lock
 __snapshots__
