--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
+    "firebase": "^5.3.0",
     "moment": "^2.22.2",
     "node-sass": "^4.9.2",
     "normalize.css": "7.0.0",
