--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test": "jest --watch",
     "test-coverage": "jest --coverage",
     "start": "node server/server.js",
-    "heroku-postbuild": "npm run build:prod"
+    "heroku-postbuild": "npm run build:prod",
+    "precommit": "pretty-quick --staged"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -58,7 +59,10 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-to-json": "^3.3.4",
+    "husky": "^0.14.3",
     "jest": "^23.4.1",
+    "prettier": "^1.13.7",
+    "pretty-quick": "^1.6.0",
     "react-test-renderer": "^16.4.1",
     "webpack-dev-server": "2.5.1"
   }
