--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --watch",
+    "test": "cross-env NODE_ENV=test jest --watch",
     "test-coverage": "jest --coverage",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod",
@@ -33,6 +33,7 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "dotenv": "^6.0.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -50,6 +51,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "^3.3.2",
@@ -64,6 +66,7 @@
     "prettier": "^1.13.7",
     "pretty-quick": "^1.6.0",
     "react-test-renderer": "^16.4.1",
+    "redux-mock-store": "^1.5.3",
     "webpack-dev-server": "2.5.1"
   }
 }
