--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "cross-env": "^5.2.0",
     "css-loader": "0.28.4",
     "dotenv": "^6.0.0",
     "enzyme-adapter-react-16": "^1.1.1",
